Protege contra acessos que não sejam do administrador, página de login, melhora o design
